[package]
name = "here-boy"
version = "0.1.1"
authors = ["Vern Hockney <fred@vernhockney.space>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
hyper-tls = "0.4.3"
confy = "0.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
structopt = "0.3.20"
