[package]
name = "here-boy"
version = "0.1.1"
authors = ["Vern Hockney <fred@vernhockney.space>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
hyper-tls = "0.5"
confy = "0.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
structopt = "0.3.20"
